--- a/01Homelife_Thing.html
+++ b/01Homelife_Thing.html
@@ -100,21 +100,26 @@ a:hover{color:#2980b9!important}
         <div class="view-meta">
             <span>作者: zukgit</span>
             <span>分类: <a href="http://host810096584.s248.pppf.com.cn/category/system/" rel="category tag">系统</a></span>
-            <span>发布时间: 2019-06-28 14:30:54</span> <!-- #zukgitholdplace_3_timestamp 文章发布时间 -->
+            <span>发布时间: 2019-06-28 15:45:08</span> <!-- #zukgitholdplace_3_timestamp 文章发布时间 -->
             <span></span>
         </div>
         <div class="view-content  markdown-body">   <!-- #zukgitholdplace_4_mdcontent 文章md内容页面		-->
-		<h1> 床</h1>
-<h2>床&沙发</h2>
+		<h1>创意家居</h1>
+<h2> 床</h2>
+<h3>床&沙发1</h3>
 <video autoplay="true" controls="controls" width="50%" hight="50%" >
 <source src="./zimage/zvideo/01homething/chuang1.mp4" type="video/mp4" />
 </video>
 <h2>沙发</h2>
+<h3>沙发1</h3>
 <video autoplay="true" controls="controls" width="50%" hight="50%" >
 <source src="./zimage/zvideo/01homething/shafa1.mp4" type="video/mp4" />
 </video>
-<h1>玄关</h1>
-<h1>END</h1>
+<h2>座椅</h2>
+<h3>座椅1</h3>
+<img src="./zimage/zvideo/01homething/zuoyi1.jpg"/>
+<h2>玄关</h2>
+<h2>END</h2>
 
 <pre><code class="">
 
@@ -123,6 +128,123 @@ https://raw.githubusercontent.com/ZukGit/Z_Wallpaper/master/zimage/
 
 </code></pre>
 
+<h1>装饰装修材料大全</h1>
+<h2>钢材金属线类</h2>
+<h3>空气开关总闸</h3>
+<img src="./zimage/zvideo/01homething/kongqikaiguan1.jpg"/>
+<h3>双屏蔽铝箔铁丝网电视线</h3>
+<img src="./zimage/zvideo/01homething/dainshixian1.jpg"/>
+<h3>旋转电视柱背景墙</h3>
+<img src="./zimage/zvideo/01homething/xuanzhuanqiang1.jpg"/>
+<img src="./zimage/zvideo/01homething/xuanzhuanqiang2.jpg"/>
+<h2>木类</h2>
+<h3>阴线</h3>
+<h3>腰线</h3>
+<h3>踢脚线</h3>
+<h3>罗马柱</h3>
+<h2>液类</h2>
+<h3>瓷砖胶</h3>
+<img src="./zimage/zvideo/01homething/jiaoshui1.jpg"/>
+<h2>石类</h2>
+<h3>洗手盆</h3>
+<img src="./zimage/zvideo/01homething/xishoupen1.jpg"/>
+<img src="./zimage/zvideo/01homething/xishoupen2.jpg"/>
+<h3>瓷砖</h3>
+
+<pre><code class="">
+
+瓷砖验货注意事项:
+1.瓷砖品名 和 批次 和票据上是否一致 确保同一批号（色差  误差小）
+2.查看包装条是否二次重复封条 可能是退货类
+3.多买一两平米  排除再次买没货
+4.摇一摇有没碎
+5.两箱盒子瓷砖抽取验颜色 尺差
+
+</code></pre>
+
+<h2>家具电器类</h2>
+<h3>玄关柜</h3>
+<img src="./zimage/zvideo/01homething/xuanguangui1.jpg"/>
+<h3>合阶抽屉</h3>
+<img src="./zimage/zvideo/01homething/hejiechouti1.jpg"/>
+<h3>卡座</h3>
+<img src="./zimage/zvideo/01homething/kazuo1.jpg"/>
+<h3>吧台</h3>
+<img src="./zimage/zvideo/01homething/batai1.jpg"/>
+<h3>飘台|地台</h3>
+<img src="./zimage/zvideo/01homething/ditai1.jpg"/>
+<img src="./zimage/zvideo/01homething/ditai2.jpg"/>
+<h2>玻璃陶瓷塑料物件</h2>
+<h3>暗盒</h3>
+<img src="./zimage/zvideo/01homething/anhe1.jpg"/>
+<h2>地毯毛织物</h2>
+<h2>其他</h2>
+<h2>主材辅材</h2>
+<h3>主材</h3>
+<h4>室内门</h4>
+<h4>整体橱柜</h4>
+<h4>集体吊顶</h4>
+<h4>水槽</h4>
+<h4>瓷砖</h4>
+<h4>地板</h4>
+<h4>洁具五金</h4>
+<h4>开关面板</h4>
+<h3>辅材</h3>
+<h4>防水材料</h4>
+<h4>PPR水管</h4>
+<h4>角阀</h4>
+<h4>地漏</h4>
+<h4>洗衣机龙头</h4>
+<h4>拖把池</h4>
+<h4>电线管</h4>
+<h4>电线</h4>
+<h4>暗盒</h4>
+<h4>面板</h4>
+<h4>电视视频线</h4>
+<h4>电话线</h4>
+<h4>网络线</h4>
+<h4>音箱视频线</h4>
+<h4>细木工板</h4>
+<h4>墙面涂料</h4>
+<h4>木器漆</h4>
+<h1>装修流程</h1>
+<h2>土建改造</h2>
+<h3>拆墙</h3>
+<h3>砌墙</h3>
+<h3>墙面处理</h3>
+<h3>回填</h3>
+<h3>地面抬高</h3>
+<h3>打孔</h3>
+<h2>水电改造</h2>
+<h3>防水处理</h3>
+<h3>水路改造</h3>
+<h3>电路改造</h3>
+<h3>管线铺设</h3>
+<h2>泥工贴砖</h2>
+<h3>墙面贴砖</h3>
+<h3>地面贴砖</h3>
+<h3>地面找平</h3>
+<h3>地漏防水</h3>
+<h2>木工造型</h2>
+<h3>吊顶</h3>
+<h3>造型制作</h3>
+<h3>柜体制作</h3>
+<h2>油工刷漆</h2>
+<h3>墙面施工</h3>
+<h3>木器漆施工</h3>
+<h2>成品安装</h2>
+<h3>室内门安装</h3>
+<h3>洁具五金安装</h3>
+<h3>浴霸安装</h3>
+<h3>灯具安装</h3>
+<h3>水槽安装</h3>
+<h3>地板安装</h3>
+<h3>窗户安装</h3>
+<h2>其他服务</h2>
+<h3>垃圾清运</h3>
+<h3>材料运输</h3>
+<h3>材料上楼</h3>
+<h3>成品保护</h3>
 
         </div>
         <section class="view-tag">
