--- a/01Homelife_Thing.html
+++ b/01Homelife_Thing.html
@@ -100,7 +100,7 @@ a:hover{color:#2980b9!important}
         <div class="view-meta">
             <span>作者: zukgit</span>
             <span>分类: <a href="http://host810096584.s248.pppf.com.cn/category/system/" rel="category tag">系统</a></span>
-            <span>发布时间: 2019-06-28 15:45:08</span> <!-- #zukgitholdplace_3_timestamp 文章发布时间 -->
+            <span>发布时间: 2019-07-02 23:56:00</span> <!-- #zukgitholdplace_3_timestamp 文章发布时间 -->
             <span></span>
         </div>
         <div class="view-content  markdown-body">   <!-- #zukgitholdplace_4_mdcontent 文章md内容页面		-->
@@ -128,6 +128,28 @@ https://raw.githubusercontent.com/ZukGit/Z_Wallpaper/master/zimage/
 
 </code></pre>
 
+<h1>中意房屋收藏</h1>
+<h2>房A1</h2>
+<video autoplay="true" controls="controls" width="75%" hight="75%" >
+<source src="./zimage/zvideo/01homething/A1_house.mp4" type="video/mp4" />
+</video>
+<h3>信息地图位置</h3>
+<p>
+<img src="./zimage/zvideo/01homething/A1_house_xinxi.jpg"  width="40%" hight="40%" />
+<img src="./zimage/zvideo/01homething/A1_house_ditu.jpg"  width="40%" hight="40%" />
+</p>
+<h3>户型</h3>
+<img src="./zimage/zvideo/01homething/A1_house_huxing.jpg"  width="66%" hight="66%" />
+<h3>图片</h3>
+<img src="./zimage/zvideo/01homething/A1_house_01.jpg"    width="49%" hight="49%" />
+<img src="./zimage/zvideo/01homething/A1_house_02.jpg"    width="49%" hight="49%" />
+<img src="./zimage/zvideo/01homething/A1_house_03.jpg"    width="49%" hight="49%" />
+<img src="./zimage/zvideo/01homething/A1_house_04.jpg"    width="49%" hight="49%" />
+<img src="./zimage/zvideo/01homething/A1_house_05.jpg"    width="49%" hight="49%" />
+<img src="./zimage/zvideo/01homething/A1_house_06.jpg"    width="49%" hight="49%" />
+<img src="./zimage/zvideo/01homething/A1_house_07.jpg"    width="49%" hight="49%" />
+<img src="./zimage/zvideo/01homething/A1_house_08.jpg"    width="49%" hight="49%" />
+<img src="./zimage/zvideo/01homething/A1_house_09.jpg"    width="49%" hight="49%" />
 <h1>装饰装修材料大全</h1>
 <h2>钢材金属线类</h2>
 <h3>空气开关总闸</h3>
