--- a/zimage/zvideo/02world/D1_local_videoworld.html
+++ b/zimage/zvideo/02world/D1_local_videoworld.html
@@ -100,27 +100,27 @@ a:hover{color:#2980b9!important}
         <div class="view-meta">
             <span>作者: zukgit</span>
             <span>分类: <a href="http://host810096584.s248.pppf.com.cn/category/system/" rel="category tag">系统</a></span>
-            <span>发布时间: 2019-07-27 00:24:43</span> <!-- #zukgitholdplace_3_timestamp 文章发布时间 -->
+            <span>发布时间: 2019-07-27 00:43:26</span> <!-- #zukgitholdplace_3_timestamp 文章发布时间 -->
             <span></span>
         </div>
         <div class="view-content  markdown-body">   <!-- #zukgitholdplace_4_mdcontent 文章md内容页面		-->
 		<h1>山</h1>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="33.3%" hight="33.3%" >
 <source src=".\mountain_0640x1136_0001_0001.mp4" type="video/mp4" />
  </video>
 </p>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="50.0%" hight="50.0%" >
 <source src=".\mountain_1280x0952_0001_0009.mp4" type="video/mp4" />
  </video>
 </p>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="50.0%" hight="50.0%" >
 <source src=".\mountain_1280x0720_0001_0008.mp4" type="video/mp4" />
  </video>
 </p>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="33.3%" hight="33.3%" >
 <source src=".\mountain_0720x1280_0001_0002.mp4" type="video/mp4" />
  </video>
@@ -131,7 +131,7 @@ a:hover{color:#2980b9!important}
 <source src=".\mountain_0720x1280_0003_0004.mp4" type="video/mp4" />
  </video>
 </p>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="33.3%" hight="33.3%" >
 <source src=".\mountain_0720x1280_0004_0005.mp4" type="video/mp4" />
  </video>
@@ -143,49 +143,49 @@ a:hover{color:#2980b9!important}
  </video>
 </p>
 <h1>河</h1>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="33.3%" hight="33.3%" >
 <source src=".\river_0720x1280_0001_0001.mp4" type="video/mp4" />
  </video>
 </p>
 <h1>湖</h1>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="33.3%" hight="33.3%" >
 <source src=".\lake_0544x0960_0001_0002.mp4" type="video/mp4" />
  </video>
 </p>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="33.3%" hight="33.3%" >
 <source src=".\lake_0720x1280_0001_0003.mp4" type="video/mp4" />
  </video>
 </p>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="33.3%" hight="33.3%" >
 <source src=".\lake_0540x0960_0001_0001.mp4" type="video/mp4" />
  </video>
 </p>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="50.0%" hight="50.0%" >
 <source src=".\lake_1280x0720_0001_0004.mp4" type="video/mp4" />
  </video>
 </p>
 <h1>海</h1>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="33.3%" hight="33.3%" >
 <source src=".\ocean_0544x0960_0001_0002.mp4" type="video/mp4" />
  </video>
 </p>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="50.0%" hight="50.0%" >
 <source src=".\ocean_1280x0720_0001_0012.mp4" type="video/mp4" />
  </video>
 </p>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="33.3%" hight="33.3%" >
 <source src=".\ocean_0404x0720_0001_0001.mp4" type="video/mp4" />
  </video>
 </p>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="33.3%" hight="33.3%" >
 <source src=".\ocean_0720x1280_0001_0003.mp4" type="video/mp4" />
  </video>
@@ -196,7 +196,7 @@ a:hover{color:#2980b9!important}
 <source src=".\ocean_0720x1280_0003_0005.mp4" type="video/mp4" />
  </video>
 </p>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="33.3%" hight="33.3%" >
 <source src=".\ocean_0720x1280_0004_0006.mp4" type="video/mp4" />
  </video>
@@ -207,7 +207,7 @@ a:hover{color:#2980b9!important}
 <source src=".\ocean_0720x1280_0006_0008.mp4" type="video/mp4" />
  </video>
 </p>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="33.3%" hight="33.3%" >
 <source src=".\ocean_0720x1280_0007_0009.mp4" type="video/mp4" />
  </video>
@@ -219,7 +219,7 @@ a:hover{color:#2980b9!important}
  </video>
 </p>
 <h1>日</h1>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="50.0%" hight="50.0%" >
 <source src=".\sun_1280x0720_0001_0001.mp4" type="video/mp4" />
  </video>
@@ -227,7 +227,7 @@ a:hover{color:#2980b9!important}
 <h1>月</h1>
 <h1>星</h1>
 <h1>光</h1>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="50.0%" hight="50.0%" >
 <source src=".\light_1280x0720_0001_0001.mp4" type="video/mp4" />
  </video>
@@ -235,7 +235,7 @@ a:hover{color:#2980b9!important}
 <source src=".\light_1280x0720_0002_0002.mp4" type="video/mp4" />
  </video>
 </p>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="50.0%" hight="50.0%" >
 <source src=".\light_1280x0720_0003_0003.mp4" type="video/mp4" />
  </video>
@@ -244,7 +244,7 @@ a:hover{color:#2980b9!important}
  </video>
 </p>
 <h1>天玄</h1>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="33.3%" hight="33.3%" >
 <source src=".\sky_0720x1280_0001_0003.mp4" type="video/mp4" />
  </video>
@@ -255,7 +255,7 @@ a:hover{color:#2980b9!important}
 <source src=".\sky_0720x1280_0003_0005.mp4" type="video/mp4" />
  </video>
 </p>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="33.3%" hight="33.3%" >
 <source src=".\sky_0720x1280_0004_0006.mp4" type="video/mp4" />
  </video>
@@ -266,7 +266,7 @@ a:hover{color:#2980b9!important}
 <source src=".\sky_0720x1280_0006_0008.mp4" type="video/mp4" />
  </video>
 </p>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="50.0%" hight="50.0%" >
 <source src=".\sky_1280x0720_0001_0009.mp4" type="video/mp4" />
  </video>
@@ -274,7 +274,7 @@ a:hover{color:#2980b9!important}
 <source src=".\sky_1280x0720_0002_0010.mp4" type="video/mp4" />
  </video>
 </p>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="50.0%" hight="50.0%" >
 <source src=".\sky_1280x0720_0003_0011.mp4" type="video/mp4" />
  </video>
@@ -282,7 +282,7 @@ a:hover{color:#2980b9!important}
 <source src=".\sky_1280x0720_0004_0012.mp4" type="video/mp4" />
  </video>
 </p>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="33.3%" hight="33.3%" >
 <source src=".\sky_0540x0960_0001_0001.mp4" type="video/mp4" />
  </video>
@@ -291,7 +291,7 @@ a:hover{color:#2980b9!important}
  </video>
 </p>
 <h1>地黄</h1>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="33.3%" hight="33.3%" >
 <source src=".\land_0720x1280_0001_0001.mp4" type="video/mp4" />
  </video>
@@ -302,7 +302,7 @@ a:hover{color:#2980b9!important}
 <source src=".\land_0720x1280_0003_0003.mp4" type="video/mp4" />
  </video>
 </p>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="33.3%" hight="33.3%" >
 <source src=".\land_0720x1280_0004_0004.mp4" type="video/mp4" />
  </video>
@@ -310,7 +310,7 @@ a:hover{color:#2980b9!important}
 <source src=".\land_0720x1280_0005_0005.mp4" type="video/mp4" />
  </video>
 </p>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="50.0%" hight="50.0%" >
 <source src=".\land_1280x0720_0001_0006.mp4" type="video/mp4" />
  </video>
@@ -318,7 +318,7 @@ a:hover{color:#2980b9!important}
 <source src=".\land_1280x0720_0002_0007.mp4" type="video/mp4" />
  </video>
 </p>
-<p  style="white-space:nowrap;font-size:0" >
+<p  style="white-space:nowrap;font-size:0;margin:0;" >
 <video autoplay="true" controls="controls" width="50.0%" hight="50.0%" >
 <source src=".\land_1280x0720_0003_0008.mp4" type="video/mp4" />
  </video>
